---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: ????
  Bugfixes:
    - Reserved inventory slot (hand icon) was lost for blueprint/pipe when mod triggered
    - Pipes no longer fast replace valves or other pipe-like entities
---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 2025-05-29
  Bugfixes:
    - Error due to new underground entity invalidated mid-tick
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2025-05-28
  Features:
    - Remote interface for reading, updating, replacing the underground to pipe lookup table
  Changes:
    - Refactor API usage to use build_from_cursor and support ice-platform
  Bugfixes:
    - Temporary blueprints dropped to inventory
    - Undergrounds in blueprints creating pipes prematurely
    - Ghost pipes counting as automatic connection targets
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-05-24
  Bugfixes:
    - Fixed undo/redo not working
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2024-11-02
  Bugfixes:
    - Another crash on missing player inventory
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-11-01
  Features:
    - Place tile ghost to support automatic connector over water, space, lava, etc
  Bugfixes:
    - Crash on missing player inventory
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-23
  Features:
    - Recognizes dynamic fluid inputs, such as on Assemblers
  Changes:
    - Support for Factorio 2.0